<resources>
    <string name="app_name">Tic Tac Chec</string>
    <string name="app_id">59770752779</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="achievements_not_available">Please sign in to view achievements</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards</string>
    <string name="signin_other_error">There was an error with sign in. Please try again later</string>
    <string name="sign_out">Sign Out</string>
    <string name="you_are_signed_in">You are signed in with Google</string>
    <string name="signOut">Sign Out</string>
    <string name="playAgainstPerson">Play Against Person</string>
    <string name="playWithComputer">Play With Computer</string>
    <string name="tictacchec_title">Tic Tac Check title</string>
    <string name="leaderBoards">Leader Boards</string>
    <string name="achievements">Achievements</string>
    <string name="achievement">Achievement</string>
    <string name="signin_leaderboards_error">You must sign in to see the leader boards</string>
    <string name="signin_achievements_error">You must sign in to see the achievements</string>
    <string name="signin_playWithPerson_error">You must sign in to play against another person</string>
    <string name="multiplayer_connect_error">There has been an error initiating the multiplayer mode</string>
</resources>
