<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tictacchec="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenuActivity"
    android:orientation="vertical"
    android:background="@color/cream">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/menuHeader"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/header"
            android:contentDescription="@string/tictacchec_title" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <com.deltagames.tictacchec.View.Utils.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/playWithComputer"
            android:id="@+id/playWithComputerButton"
            tictacchec:fontName="theBoldFont.ttf"
            android:textSize="30sp"
            android:textColor="@color/orange" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <com.deltagames.tictacchec.View.Utils.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/playAgainstPerson"
            android:id="@+id/playWithPersonButton"
            tictacchec:fontName="theBoldFont.ttf"
            android:textSize="30sp"
            android:textColor="@color/orange" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <com.deltagames.tictacchec.View.Utils.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/leaderBoards"
            android:id="@+id/openLeaderBoardsButton"
            tictacchec:fontName="theBoldFont.ttf"
            android:textSize="30sp"
            android:textColor="@color/orange" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"/>

        </FrameLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.deltagames.tictacchec.View.Utils.BoldTextView
            android:id="@+id/openAchievementsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements"
            tictacchec:fontName="theBoldFont.ttf"
            android:textSize="12sp"
            android:textColor="@color/orange"
            android:layout_gravity="left"/>

        <com.deltagames.tictacchec.View.Utils.BoldTextView
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signOut"
            tictacchec:fontName="theBoldFont.ttf"
            android:textSize="12sp"
            android:textColor="@color/orange"
            android:layout_gravity="right" />

    </FrameLayout>


</LinearLayout>
